<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="180dp"
    android:layout_height="100dp"
    app:cardBackgroundColor="@color/blue_small_card_background"
    app:cardCornerRadius="18dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/smallCardIcon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/default_desc"
            android:padding="15dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/smallCardText"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/weather" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/smallCardText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/smallCardIcon"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/smallCardMorn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/smallCardDay">

                <TextView
                    android:id="@+id/smallCardMornText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/morning" />

                <TextView
                    android:id="@+id/smallCardMornTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="14:00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/smallCardDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/smallCardMorn"
                app:layout_constraintBottom_toTopOf="@+id/smallCardEve">

                <TextView
                    android:id="@+id/smallCardDayText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/day" />

                <TextView
                    android:id="@+id/smallCardDayTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="14:00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/smallCardEve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/smallCardDay"
                app:layout_constraintBottom_toTopOf="@+id/smallCardNight">

                <TextView
                    android:id="@+id/smallCardEveText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/evening" />

                <TextView
                    android:id="@+id/smallCardEveTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="14:00" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/smallCardNight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/smallCardEve"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/smallCardNightText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:text="@string/night" />

                <TextView
                    android:id="@+id/smallCardNightTemp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="14:00" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>