<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="weatherViewModel"
            type="com.example.yandexweatherapp.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_main_background"
        tools:context=".WeatherFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/weatherIcon"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/default_desc"
            android:scaleType="center"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_clouds" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherTempGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/weatherIcon">

            <TextView
                android:id="@+id/weatherTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="64sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/weatherTempDegrees"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="27" />

            <TextView
                android:id="@+id/weatherTempDegrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees_sign"
                android:textColor="@color/white"
                android:textSize="64sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weatherTemp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/weatherTimezone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/weatherTempGroup"
            tools:text="Cebu, Philippines" />

        <TextView
            android:id="@+id/weatherMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/weatherTimezone"
            tools:text="Cloudy" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weatherParams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/weatherMain">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/weatherWind"
                style="@style/CustomCardCornersLeft"
                android:layout_width="80dp"
                android:layout_height="75dp"
                app:cardBackgroundColor="@color/blue_small_card_background"
                app:layout_constraintEnd_toStartOf="@id/weatherHumidity"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/weatherParamsWind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/weatherParamsWindText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/weatherParamsWindDynamic"
                            style="@style/WeatherParamsDynamicText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/weatherParamsWindStatic"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="15" />

                        <TextView
                            android:id="@+id/weatherParamsWindStatic"
                            style="@style/WeatherParamsDynamicText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed_sign"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/weatherParamsWindDynamic"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/weatherParamsWindText"
                        style="@style/WeatherParamsStaticText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/weatherParamsWind" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/weatherHumidity"
                android:layout_width="80dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@id/weatherWind"
                app:cardBackgroundColor="@color/blue_small_card_background"
                app:layout_constraintBottom_toBottomOf="@+id/weatherWind"
                app:layout_constraintEnd_toStartOf="@id/weatherPressure"
                app:layout_constraintStart_toEndOf="@id/weatherWind"
                app:layout_constraintTop_toTopOf="@+id/weatherWind">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/weatherParamsHumidity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/weatherParamsHumidityText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/weatherParamsHumidityDynamic"
                            style="@style/WeatherParamsDynamicText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/weatherParamsHumidityStatic"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="89" />

                        <TextView
                            android:id="@+id/weatherParamsHumidityStatic"
                            style="@style/WeatherParamsDynamicText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/percent_sign"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/weatherParamsHumidityDynamic"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/weatherParamsHumidityText"
                        style="@style/WeatherParamsStaticText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/weatherParamsHumidity" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/weatherPressure"
                style="@style/CustomCardCornersRight"
                android:layout_width="80dp"
                android:layout_height="75dp"
                app:cardBackgroundColor="@color/blue_small_card_background"
                app:layout_constraintBottom_toBottomOf="@+id/weatherHumidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/weatherHumidity"
                app:layout_constraintTop_toTopOf="@+id/weatherHumidity">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/weatherParamsPressure"
                        style="@style/WeatherParamsDynamicText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toTopOf="@id/weatherParamsPressureText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="52" />

                    <TextView
                        android:id="@+id/weatherParamsPressureText"
                        style="@style/WeatherParamsStaticText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/weatherParamsPressure" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--        <TextView-->
        <!--            android:id="@+id/weatherToday"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="20sp"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintStart_toEndOf="@id/guidelineLeft"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/weatherParams"-->
        <!--            tools:text="Today" />-->

        <Spinner
            android:id="@+id/weatherPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:entries="@array/weather_period"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:theme="@style/spinnerTheme"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/weatherParams" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weatherList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/weatherPeriod" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>